plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'nova'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

sourceSets {
	main {
		resources {
			srcDirs = ['src/main/resources', 'MJS-BACK-SECURITY']
		}
	}
}

tasks.named('processResources') {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// 빌드시 jar 파일 한개만 생성하기
jar {
	enabled = false
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// sql 쿼리 성능 체크
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

	//AWS S3
	implementation 'software.amazon.awssdk:s3:2.20.136'

	// API 문서 openAPI swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// H2 내장형 테스트용 DB
	implementation 'com.h2database:h2'

	// JWT 생성 라이브러리 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'commons-codec:commons-codec:1.15'
	//jsoup 의존성 추가
	implementation 'org.jsoup:jsoup:1.16.1'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//webclient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//Json parse
	implementation 'org.json:json:20210307'

	//elastic search
//	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
//	implementation 'co.elastic.clients:elasticsearch-java:8.10.4'
	implementation 'org.springframework.data:spring-data-elasticsearch:5.2.1'

    //Email 인증
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Komoran
	implementation 'com.github.shin285:KOMORAN:3.3.9'

}

test {
	useJUnitPlatform()
}